update create api of kand question and chapter
