# Controller/questionController.js
@@ -1,10 +1,11 @@
 const Question = require("../models/Question.model");
 const DEBUG = process.env.DEBUG;
 const logger = require("../Config/Logger");
+const Chapter = require("../models/Chapter.model");
 
 // Get All Question
 const getAllQuestions = async (req, res) => {
-        // #swagger.tags = ['Question']
+  // #swagger.tags = ['Question']
   if (DEBUG) {
     console.log("Get All Question Function Start");
   }
@@ -19,7 +20,7 @@ const getAllQuestions = async (req, res) => {
 
 // Get Question by ID
 const getQuestionById = async (req, res) => {
-      // #swagger.tags = ['Question']
+  // #swagger.tags = ['Question']
   const questionId = req.params.id;
   if (DEBUG) {
     console.log("Get Question By ID Function Start");
@@ -38,11 +39,44 @@ const getQuestionById = async (req, res) => {
 
 // Create Question
 const createQuestion = async (req, res) => {
-      // #swagger.tags = ['Question']
-  const { title, content, courseId } = req.body;
+  // #swagger.tags = ['Question']
+  const { question, answer, category, description, kand, chapter, option } =
+    req.body;
   try {
-    let question = new Question({ title, content, courseId });
+    let question = new Question({
+      question,
+      answer,
+      category,
+      description,
+      kand,
+      chapter,
+      option,
+    });
     await question.save();
+
+    // Find the chapter and update it with the new question reference
+    let chapterDoc = await Chapter.findById(chapter);
+    if (!chapterDoc) {
+      await Question.findByIdAndDelete(question._id);
+      return res.status(404).json({ msg: "Chapter not found" });
+    }
+
+    switch (difficulty) {
+      case "easy":
+        chapterDoc.easyQuestion.push(question._id);
+        break;
+      case "medium":
+        chapterDoc.mediumQuestion.push(question._id);
+        break;
+      case "hard":
+        chapterDoc.hardQuestion.push(question._id);
+        break;
+      default:
+        await Question.findByIdAndDelete(question._id);
+        return res.status(400).json({ msg: "Invalid difficulty level" });
+    }
+
+    await chapterDoc.save();
     res.status(201).json({ msg: "Question created successfully", question });
   } catch (error) {
     console.log(error);
@@ -52,7 +86,7 @@ const createQuestion = async (req, res) => {
 
 // Update Question
 const updateQuestion = async (req, res) => {
-      // #swagger.tags = ['Question']
+  // #swagger.tags = ['Question']
   const questionId = req.params.id;
   try {
     const updatedQuestion = await Question.findByIdAndUpdate(
@@ -75,7 +109,7 @@ const updateQuestion = async (req, res) => {
 
 // Delete Question
 const deleteQuestion = async (req, res) => {
-      // #swagger.tags = ['Question']
+  // #swagger.tags = ['Question']
   const questionId = req.params.id;
   try {
     const deletedQuestion = await Question.findByIdAndDelete(questionId);
