# models/Question.model.js
@@ -1,13 +1,17 @@
 const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 const Chapter = require("./Chapter.model");
-const Kand = require('./Kand.model')
+const Kand = require("./Kand.model");
 
 const questionSchema = new Schema(
   {
     question: { type: String, required: true },
     answer: { type: String, required: true },
-    category: { type: String, required: true },
+    category: {
+      type: String,
+      enum: ["easy", "medium", "hard"],
+      required: true,
+    },
     description: { type: String, required: false },
     kand: { type: mongoose.Schema.Types.ObjectId, ref: "Kand" },
     chapter: { type: mongoose.Schema.Types.ObjectId, ref: "Chapter" },
